# SSD-Single-Shot-Detector-in-CUDA

./: CMakeLists.txt  DNNLIB.cpp  DNNLIB.h  Main.cpp  Main.h  README.md  kernel.cu  ssd512_weights_txt.part07.rar
